--- a/TourManagement.Presentation/Views/Home/Contact.cshtml
+++ b/TourManagement.Presentation/Views/Home/Contact.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "Contact - Let's go";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="clearfix">
+<div>
     <div>
         <p>THÔNG TIN CƠ BẢN</p>
     </div>
