--- a/TourManagement.Presentation/Views/Hotels/Details.cshtml
+++ b/TourManagement.Presentation/Views/Hotels/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TourManagement.Models.DBContext.Hotel
 @{
     ViewBag.Title = "Khách sạn | đặt phòng";
-
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container tour-container pt-4">
