--- a/TourManagement.Presentation/Areas/Admin/Css/style.css
+++ b/TourManagement.Presentation/Areas/Admin/Css/style.css
@@ -631,7 +631,7 @@ body {
     font-size: 50px;
 }
 
-.card {
+.card-cus {
     background: var(--main-bg-color);
     color: var(--main-color);
     border-radius: 10px;
