--- a/TourManagement.Presentation/Views/Home/SearchTour.cshtml
+++ b/TourManagement.Presentation/Views/Home/SearchTour.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.Tour>
 @{
     ViewBag.Title = "Search Tour";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row">
