--- a/TourManagement.Presentation/Views/Hotels/Index.cshtml
+++ b/TourManagement.Presentation/Views/Hotels/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.Hotel>
 @{
     ViewBag.Title = "Danh sách khách sạn";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
     int totalPage = @ViewBag.TotalPage;
     int pageRange = 3;
