--- a/TourManagement.Presentation/Views/Shared/_Layout.cshtml
+++ b/TourManagement.Presentation/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         </div>
 
         <div class="collapse navbar-collapse row" id="navbarSupportedContent">
-            <ul class="navbar-nav col">
+            <ul class="navbar-nav col-4">
                 <li class="nav-item dropdown" id="group-tour">
                     <a class="nav-link font-weight-bold" href="@Url.Action("Index", "Home", new { area = "" })">TOUR</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -44,10 +44,18 @@
                 </li>
             </ul>
 
-            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline my-2 my-lg-0 col-4" }))
+            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline my-2 my-lg-0 col-6" }))
             {
-                <input class="form-control mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Tìm kiếm tour, điểm đến " aria-label="Search">
-                <button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/searchbtn.svg" width="25" height="25" /></button>
+                <div><input class="form-control mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Tìm kiếm tour, điểm đến " aria-label="Search"></div>
+
+                <div>
+                    <input type="date" placeholder="Date" class="form-control" required>
+                </div>
+
+                <div class="pl-2"><button class="btn btn-outline-danger form-control" type="submit">Search</button></div>
+
+
+                @*<button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/searchbtn.svg" width="25" height="25" /></button>*@
             }
             @Html.Partial("LoginPatial")
         </div>
@@ -60,9 +68,73 @@
             @RenderBody()
         </div>
         <hr />
-        <div class="card-footer text-muted text-center">
-            <p>Copyright &copy; 2021 - MeowMeow</p>
-        </div>
+        <footer class="footer">
+            <div class="container wrapper_cus">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="footer_widget">
+                            <h3 class="footer_title">
+                                Liên hệ với chúng tôi
+                            </h3>
+                            <ul class="p-0">
+                                <li>Công ty du lịch Huyền Trang</li>
+                                <li>Đăng kí ngày 23/5/2021</li>
+                                <li><a href="#">0988 686 868</a></li>
+                                <li><a href="#">dulichhuyentrang@tour.com</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div>
+                            <h3 class="footer_title">
+                                Mạng xã hội
+                            </h3>
+                            <div class="socail_links">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <img src="~/Content/images/facebook.svg" height="30" width="30" />
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="~/Content/images/instagram.svg" height="30" width="30" />
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="~/Content/images/twitter.svg" height="30" width="30" />
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="~/Content/images/youtube.svg" height="30" width="30" />
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div>
+                            <h3 class="footer_title">
+                                Chứng nhận
+                            </h3>
+                            <div class="socail_links p-0">
+                                <ul>
+                                    <li><img src="~/Content/images/chungnhan1.jpg" class="w-100" height="50"/> </li>
+                                    <li><img src="~/Content/images/chungnhan2.jpg" class="w-100" height="50"/></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <p>Copyright &copy; 2021 - MeowMeow</p>
+            </div>
+        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
