--- a/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
+++ b/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
@@ -16,7 +16,17 @@
 
 <div class="row w-100 m-0">
     <div class="col-10">
-        <a href="#" class="btn">Trang chủ</a> >> <a href="#" class="btn">@category</a>
+        <div class="row">
+            <div class="seemore col-auto">
+                <a href="@Url.Action("Index", "Home", new { area = "" })" class="link">Trang chủ</a>
+            </div>
+            <div class="col-auto">
+                <span>>></span>
+            </div>
+            <div class="seemore col-auto">
+                <a href="@Url.Action("GetByCategory", "Tours", new { category = category, page = 1 })" class="link">@category</a>
+            </div>
+        </div>
     </div>
     <div class="nav-item btn col-2 " id="group-price">
         Mức giá
