--- a/TourManagement.Presentation/Views/Home/Contact.cshtml
+++ b/TourManagement.Presentation/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Contact - Let's go";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div>
+<div class="container pt-3">
     <div>
         <p>THÔNG TIN CƠ BẢN</p>
     </div>
@@ -24,7 +24,7 @@
         </address>
         <address>
             <strong>Support:</strong>   <a href="mailto:meowmeow@gmail.com">meowmeow@travel.com</a><br />
-            <strong>Marketing:</strong> <a href="mailto:huyentrangtour@gmail.com">huyentrangtour@gmail.com</a>
+            <strong>Marketing:</strong> <a href="mailto:huyentrangtour@gmail.com">dulichhuyentrang@tour.com</a>
         </address>
     </div>
 </div>
