--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using TourManagement.Models.DBContext
 @model IEnumerable<Tour>
 @{
-    ViewBag.Title = "Tìm tour du lịch - Let's Go";
+    ViewBag.Title = "Đi muôn nơi - Let's Go";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="py-3">
@@ -13,89 +13,83 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="~/Content/images/tours/slide2.jpg" class="d-block w-100" height="400" alt="...">
+                <img src="~/Content/images/tours/slide2.jpg" class="d-block w-100" height="500" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Content/images/tours/slide5.jpg" class="d-block w-100" height="400" alt="...">
+                <img src="~/Content/images/tours/slide5.jpg" class="d-block w-100" height="500" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="~/Content/images/tours/slide4.jpg" class="d-block w-100" height="400" alt="...">
+                <img src="~/Content/images/tours/slide4.jpg" class="d-block w-100" height="500" alt="...">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
 </div>
-<div>
-    <div class="row justify-content-center">
-        <div class="col-lg-6 text-center py-3 mt-5 font-weight-bold">
-            <h2>Tour nổi bật</h2>
-        </div>
-    </div>
-    <div class="seemore text-right">
-        <a href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = 1 })" class="link"><img src="~/Content/images/eye.svg" height="15" width="15" /> Xem tất cả</a>
-    </div>
-    <div class="row">
-        @foreach (var item in Model)
-        {
-            @Html.Partial("TourOverView", item);
-        }
-    </div>
-</div>
-
-<div class="py-3">
-    <div class="text-center py-3">
-        <h3>Điểm đến yêu thích</h3>
-    </div>
-    <div class="row">
-
-        <div class="col-3 text-center">
-            <div class="destination">
-                <a href="@Url.Action("SearchTour", "Home", new { search = "Hạ Long" })">
-                    <img src="~/Content/images/destiantions/dd1.jpg" class="h-100 img-fluid" alt="dd1.jpg" re/>
-                    <div class="destination-name">
-                        <p>VỊNH HẠ LONG</p>
-                    </div>
-                </a>
-
+<div class="container pt-3">
+    <div>
+        <div class="seemore row">
+            <div class="col-6 font-weight-bold  m-0 p-0">
+                <h4>Tour nổi bật</h4>
+            </div>
+            <div class="col-6 text-right  m-0 p-0">
+                <a href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = 1 })" class="link"><img src="~/Content/images/eye.svg" height="15" width="15" /> Xem tất cả</a>
             </div>
         </div>
-        <div class="col-3 text-center">
-            <div class="destination">
-                <a href="@Url.Action("SearchTour", "Home", new { search = "SaPa" })">
-                    <img src="~/Content/images/destiantions/dd2.jpg" class="h-100 img-fluid" alt="dd2.jpg" />
-                    <div class="destination-name">
-                        <p>SAPA</p>
-                    </div>
-                </a>
-
-            </div>
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                @Html.Partial("TourOverView", item);
+            }
         </div>
-        <div class="col-3 text-center">
-            <div class="destination">
-                <a href="@Url.Action("SearchTour", "Home", new { search = "Đà Nẵng" })">
-                    <img src="~/Content/images/destiantions/dd3.jpg" class="h-100 img-fluid" alt="dd3.jpg" />
-                    <div class="destination-name">
-                        <p>ĐÀ NẴNG</p>
-                    </div>
-                </a>
+    </div>
 
-            </div>
+    <div class="py-3">
+        <div class="text-center py-3">
+            <h3>Điểm đến yêu thích</h3>
         </div>
-        <div class="col-3 text-center">
-            <div class="destination">
-                <a href="@Url.Action("SearchTour", "Home", new { search = "Phú Quốc" })">
-                    <img src="~/Content/images/destiantions/dd4.jpg" class="h-100 img-fluid" alt="dd4.jpg" />
-                    <div class="destination-name">
-                        <p>PHÚ QUỐC</p>
-                    </div>
-                </a>
+        <div class="row">
+
+            <div class="col-3 text-center">
+                <div class="destination">
+                    <a href="@Url.Action("SearchTour", "Home", new { search = "Hạ Long" })">
+                        <img src="~/Content/images/destiantions/dd1.jpg" class="h-100 img-fluid" alt="dd1.jpg" re />
+                        <div class="destination-name">
+                            <p>VỊNH HẠ LONG</p>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="col-3 text-center">
+                <div class="destination">
+                    <a href="@Url.Action("SearchTour", "Home", new { search = "SaPa" })">
+                        <img src="~/Content/images/destiantions/dd2.jpg" class="h-100 img-fluid" alt="dd2.jpg" />
+                        <div class="destination-name">
+                            <p>SAPA</p>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="col-3 text-center">
+                <div class="destination">
+                    <a href="@Url.Action("SearchTour", "Home", new { search = "Đà Nẵng" })">
+                        <img src="~/Content/images/destiantions/dd3.jpg" class="h-100 img-fluid" alt="dd3.jpg" />
+                        <div class="destination-name">
+                            <p>ĐÀ NẴNG</p>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="col-3 text-center">
+                <div class="destination">
+                    <a href="@Url.Action("SearchTour", "Home", new { search = "Phú Quốc" })">
+                        <img src="~/Content/images/destiantions/dd4.jpg" class="h-100 img-fluid" alt="dd4.jpg" />
+                        <div class="destination-name">
+                            <p>PHÚ QUỐC</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
