--- a/TourManagement.Presentation/Views/Shared/TourOverView.cshtml
+++ b/TourManagement.Presentation/Views/Shared/TourOverView.cshtml
@@ -4,7 +4,7 @@
 
 }
 
-<div class="col-3 py-3 px-1">
+<div class="col-3 pb-3 px-1">
     <div class="card tours">
         <div class="tour-image">
             <img src="~/Content/images/tours/@listImages[0]" class="w-100 h-100" alt="@Model.Name">
@@ -20,9 +20,12 @@
                     <a class="card-title font-weight-bold" style="color: black;" href="/Tours/Details?id=@Model.Id">@Model.Name</a>
                 }
             </div>
-            <div class="row text-center">
-                <span class="col-7"><img src="~/Content/images/calendar.svg" height="15" width="15" /> @Model.TimeStart.Value.ToString("dd/MM/yyyy")</span>
-                <span class="col-5 px-0"><span style="color:red; padding-right:5px; font-weight:bold">@Math.Truncate(Model.PriceOfAdult.Value).ToString("###,###,###") đ</span></span>
+            <div class="row text-center w-100 m-0">
+                <div class="col-6 row m-0">
+                    <span><img src="~/Content/images/clock.svg" height="15" width="15" /> @Model.Time ngày</span>
+                    <span><img src="~/Content/images/calendar.svg" height="15" width="15" /> @Model.TimeStart.Value.ToString("dd/MM/yyyy")</span>
+                </div>
+                <span class="col-6 px-0"><span style="color:red; padding-right:5px; font-weight:bold">@Math.Truncate(Model.PriceOfAdult.Value).ToString("###,###,###") đ</span></span>
             </div>
         </div>
     </div>
