--- a/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
+++ b/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
@@ -14,59 +14,62 @@
 
 }
 
-<div class="row w-100 m-0">
-    <div class="col-10">
-        <div class="row">
-            <div class="seemore col-auto">
-                <a href="@Url.Action("Index", "Home", new { area = "" })" class="link">Trang chủ</a>
+<div class="container pt-2">
+    <div class="row w-100 m-0 px-3 bg-light"s>
+        <div class="col-10 p-0">
+            <div class="row">
+                <div class="seemore col-auto">
+                    <a href="@Url.Action("Index", "Home", new { area = "" })" class="link">Trang chủ</a>
+                </div>
+                <div class="col-auto">
+                    <span>>></span>
+                </div>
+                <div class="seemore col-auto">
+                    <a href="@Url.Action("GetByCategory", "Tours", new { category = category, page = 1 })" class="link">@category</a>
+                </div>
             </div>
-            <div class="col-auto">
-                <span>>></span>
-            </div>
-            <div class="seemore col-auto">
-                <a href="@Url.Action("GetByCategory", "Tours", new { category = category, page = 1 })" class="link">@category</a>
+        </div>
+        <div class="nav-item btn col-2" id="group-price">
+            <span>Mức giá</span>
+            <div class="dropdown-menu text-center w-100">
+                <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 0, endPrice = 1000000, page = 1 })"> < 1,000,000 đ</a>
+                <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 1000000, endPrice = 5000000, page = 1 })"> < 5,000,000 đ</a>
+                <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 5000000, endPrice = 10000000, page = 1 })"> < 10,000,000 đ</a>
+                <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 10000000, endPrice = 100000000, page = 1 })"> > 10,000,000 đ</a>
             </div>
         </div>
     </div>
-    <div class="nav-item btn col-2 " id="group-price">
-        Mức giá
-        <div class="dropdown-menu text-center w-100">
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 0, endPrice = 1000000, page = 1 })"> < 1,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 1000000, endPrice = 5000000, page = 1 })"> < 5,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 5000000, endPrice = 10000000, page = 1 })"> < 10,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 10000000, endPrice = 100000000, page = 1 })"> > 10,000,000 đ</a>
-        </div>
-    </div>
-</div>
 
-<div>
-    @if (!Model.Any())
-    {
-        <div class="text-center py-5"><p>Không tim thấy tour nào phù hợp</p></div>
-    }
-    else
-    {
-        <div class="row">
-            @foreach (var item in Model)
-            {
-                @Html.Partial("TourOverView", item);
-            }
-        </div>
-
-        <nav aria-label="Page navigation example" class="row w-100">
-            <ul class="pagination col-12 justify-content-center">
-                <li class="page-item"><a class="btn page-link @prevDisabled" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page=(currentPage - 1 <= 0 ? 1 : currentPage - 1) })">Previous</a></li>
-                @for (int i = 1; i <= totalPage; i++)
+    <div>
+        @if (!Model.Any())
+        {
+            <div class="text-center py-5"><p>Không tim thấy tour nào phù hợp</p></div>
+        }
+        else
+        {
+            <div class="row">
+                @foreach (var item in Model)
                 {
-                    if (i >= currentPage - pageRange && i <= currentPage + pageRange)
-                    {
-                        <li class="page-item">
-                            <a class="page-link" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = i })">@i</a>
-                        </li>
-                    }
+                    @Html.Partial("TourOverView", item);
                 }
-                <li class="page-item"><a class="btn page-link @nextDisabled" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page=(currentPage + 1 > totalPage ? totalPage :   currentPage + 1)})">Next</a></li>
-            </ul>
-        </nav>
-    }
+            </div>
+
+            <nav aria-label="Page navigation example" class="row w-100">
+                <ul class="pagination col-12 justify-content-center">
+                    <li class="page-item"><a class="btn page-link @prevDisabled" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page=(currentPage - 1 <= 0 ? 1 : currentPage - 1) })">Previous</a></li>
+                    @for (int i = 1; i <= totalPage; i++)
+                    {
+                        if (i >= currentPage - pageRange && i <= currentPage + pageRange)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = i })">@i</a>
+                            </li>
+                        }
+                    }
+                    <li class="page-item"><a class="btn page-link @nextDisabled" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page=(currentPage + 1 > totalPage ? totalPage :   currentPage + 1)})">Next</a></li>
+                </ul>
+            </nav>
+        }
+    </div>
+
 </div>
